--- a/.travis.yml
+++ b/.travis.yml
@@ -8,22 +8,20 @@ env:
         - CLOUDSDK_CORE_DISABLE_PROMPTS=1
     
 before_install:
-    - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
-    - curl https://sdk.cloud.google.com | bash > /dev/null;
-    - source $HOME/google-cloud-sdk/path.bash.inc
-    - gcloud components update kubectl
-    - gcloud auth activate-service-account --key-file service-account.json
-    - gcloud config set project articulate-run-261810
-    - gcloud config set compute/zone europe-north1-a
-    - gcloud container clusters get-credentials multi-cluster
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker build -t bcp24521/react-test -f ./client/Dockerfile.dev ./client
+    - apt-get update
+    - apt-get -y install curl
+    - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    - az login --service-principal -u $AZURE_USER -p $AZURE_SECRET  --tenant $AZURE_TENANT
+    - az aks install-cli
+    - az aks get-credentials --resource-group multik8 --name multik8 --subscription $AZURE_SUBSCRIPTION
     
 script:
     - docker run -e CI=true bcp24521/react-test npm run test 
     
 deploy:
-    provider: script
+    provider: azure_web_apps
     script: bash ./deploy.sh
     on: 
         branch: master
