--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,28 +5,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
-  tls:
-    - hosts:
-        - metis-technology.com
-        - www.metis-technology.com
-      secretName: metis-technology-com
   rules:
-    - host: metis-technology.com
-      http:
-        paths:
-          - path: /?(.*)
-            backend:
-              serviceName: client1-cluster-ip-service
-              servicePort: 3000
-          - path: /api/?(.*)
-            backend:
-              serviceName: server1-cluster-ip-service
-              servicePort: 5000
-    - host: www.metis-technology.com
-      http:
+    - http:
         paths:
           - path: /?(.*)
             backend:
